Limit code block overflow fix to x-axis

--- a/themes/basic/assets/css/reset.css
+++ b/themes/basic/assets/css/reset.css
@@ -59,7 +59,7 @@ video {
 }
 
 pre {
-	overflow: auto;
+	overflow-x: auto;
 }
 
 img[width][height],
